fixed data tables on small devices

--- a/wr250r/_sass/articles.scss
+++ b/wr250r/_sass/articles.scss
@@ -14,6 +14,7 @@
 		}
 		
 		.data-table {
+			background: #fff;
 			tbody {
 				font-family: courier, sans-serif;
 				font-size: 13px;
